# PWHomeWork8part2

./: README.md  consumer.py  email_consumer.py  models.py  producer.py  pyproject.toml  sms_consumer.py
